aggiunto accept di XML